--- a/bin/install
+++ b/bin/install
@@ -49,7 +49,8 @@ set_env_var DISABLE_OPENSHIFT_MANAGED_SERVER_CONFIG true ~/.env/user_vars
 
 # Set usernames, generate passwords and create env variables
 echo 'Generating username and password'
-
+#Set Super user for manipulate any task
+bpmsuperuser_username=Administrator
 bpmadmin_username=bc-admin
 bpmanalyst_username=bc-analyst
 bpmdeveloper_username=bc-developer
@@ -59,6 +60,7 @@ root_username=bc-root
 loan_username=bc-loan
 
 
+bpmsuperuser_password=bc-power
 bpmadmin_password=bc-admin
 bpmanalyst_password=bc-analyst
 bpmdeveloper_password=bc-developer
@@ -69,6 +71,7 @@ loan_password=bc-loan
 
 # env vars
 #
+echo "$bpmsuperuser_username" > $OPENSHIFT_BPMS_DIR/env/OPENSHIFT_BPMS_BPMSUPERUSER_USERNAME
 echo "$bpmadmin_username" > $OPENSHIFT_BPMS_DIR/env/OPENSHIFT_BPMS_BPMADMIN_USERNAME
 echo "$bpmadmin_password" > $OPENSHIFT_BPMS_DIR/env/OPENSHIFT_BPMS_BPMADMIN_PASSWORD
 
@@ -93,6 +96,7 @@ echo "$bpmdeveloper_password" > $OPENSHIFT_BPMS_DIR/env/OPENSHIFT_BPMS_BPMDEVELO
 # Create the bpms-security-users.properties file
 BPMS_USERS_PATH="${OPENSHIFT_BPMS_DIR}/template/${OPENSHIFT_BPMS_CONFIG_PATH}/${OPENSHIFT_BPMS_USERS_FILE}"
 echo "# username=password" > $BPMS_USERS_PATH
+echo "${bpmsuperuser_username}=${bpmsuperuser_password}" >> $BPMS_USERS_PATH
 echo "${bpmadmin_username}=${bpmadmin_password}" >> $BPMS_USERS_PATH
 echo "${bpmanalyst_username}=${bpmanalyst_password}" >> $BPMS_USERS_PATH
 echo "${bpmdeveloper_username}=${bpmdeveloper_password}" >> $BPMS_USERS_PATH
